[gd_scene load_steps=4 format=3 uid="uid://2kd8qk0mkmpb"]

[ext_resource type="Theme" uid="uid://brnraesdacowk" path="res://Assets/Themes/default_theme.tres" id="1_6n1j2"]
[ext_resource type="Script" path="res://Scenes/6 - Menu/Scripts/game_menu.gd" id="2_vwrvw"]
[ext_resource type="FontFile" uid="uid://cl7cbmljl0hax" path="res://Assets/Fonts/bloodcrow.ttf" id="2_y3cm5"]

[node name="GameMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_6n1j2")
script = ExtResource("2_vwrvw")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.196078, 0.196078, 0.196078, 1)

[node name="Padding" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VerticalAllignment" type="VBoxContainer" parent="Padding"]
layout_mode = 2
theme_override_constants/separation = 60

[node name="Line Break" type="Control" parent="Padding/VerticalAllignment"]
layout_mode = 2

[node name="Title" type="Label" parent="Padding/VerticalAllignment"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.298039)
theme_override_constants/shadow_offset_x = 17
theme_override_constants/shadow_offset_y = 40
theme_override_constants/outline_size = 0
theme_override_constants/shadow_outline_size = 0
theme_override_fonts/font = ExtResource("2_y3cm5")
theme_override_font_sizes/font_size = 120
text = "MENU"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HorizontalAlligment" type="HBoxContainer" parent="Padding"]
layout_mode = 2
alignment = 1

[node name="VerticalAllignment" type="VBoxContainer" parent="Padding/HorizontalAlligment"]
layout_mode = 2
theme_override_constants/separation = 64
alignment = 1

[node name="Line Break" type="Control" parent="Padding/HorizontalAlligment/VerticalAllignment"]
layout_mode = 2

[node name="ButtonResume" type="Button" parent="Padding/HorizontalAlligment/VerticalAllignment"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_y3cm5")
theme_override_font_sizes/font_size = 82
text = "Resume"
flat = true

[node name="ButtonReturn" type="Button" parent="Padding/HorizontalAlligment/VerticalAllignment"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_y3cm5")
theme_override_font_sizes/font_size = 82
text = "Return to title screen
"
flat = true

[node name="ButtonExit" type="Button" parent="Padding/HorizontalAlligment/VerticalAllignment"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_y3cm5")
theme_override_font_sizes/font_size = 82
text = "Exit to desktop
"
flat = true

[connection signal="pressed" from="Padding/HorizontalAlligment/VerticalAllignment/ButtonResume" to="." method="_on_button_resume_pressed"]
[connection signal="pressed" from="Padding/HorizontalAlligment/VerticalAllignment/ButtonReturn" to="." method="_on_button_return_pressed"]
[connection signal="pressed" from="Padding/HorizontalAlligment/VerticalAllignment/ButtonExit" to="." method="_on_button_exit_pressed"]
